<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/enable_touch_assistant"
                android:textColor="#202020"
                android:textSize="15sp" />

            <com.zh.touchassistant.widget.SwitchButton
                android:id="@+id/enable_switch"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                app:sb_checked="false"
                app:sb_checked_bg="#0F83E1"
                app:sb_circle_bg_margin="2.5dp"
                app:sb_unchecked_bg="#EAEAEA" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/base_divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customize_entries"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/custom_menu_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/customize_entries"
                android:textColor="#202020"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hide_touch_assistant_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_touch_assistant_intro"
                android:textColor="#202020"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/hide_touch_assistant"
                android:textColor="#909090"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/base_divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_others"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/restore_default_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/restore_default"
                android:textColor="#202020"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
